# rinha-2-django

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  rinha.http
conf/: nginx.conf  pgbouncer.ini  postgresql.conf
rinha/: asgi.py  settings.py  urls.py  wsgi.py
rinha/apps/core/: [pgbouncer].ini  admin.py  apps.py  models.py  serializers.py  views.py
rinha/apps/core/migrations/: 0001_initial.py
