[tool.poetry]
name = "rinha-2-django"
version = "0.1.0"
description = ""
authors = ["Rafael Miranda <rafaelpadovezi@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-rest-framework = "^0.1.0"
gevent = "^24.2.1"
gunicorn = "^21.2.0"
psycogreen = "^1.0.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
